--- a/Source/Allow Tool - Instant Haul.csproj
+++ b/Source/Allow Tool - Instant Haul.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AllowTool">
-      <HintPath>..\..\AllowTool\v1.5\Assemblies\AllowTool.dll</HintPath>
+      <HintPath>C:\Games\RimWorld\Latest\Mods\761421485\v1.6\Assemblies\AllowTool.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
@@ -49,10 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.5.4062</Version>
+      <Version>1.6.4535</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony">
-      <Version>2.3.3</Version>
+      <Version>2.3.6</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
